# applepie-cms

./: README.md  edit.html  index.html  menu.html  package-lock.json  package.json  upload.html
src/: menu.ts  upload.ts
src-tauri/: Cargo.toml  tauri.conf.json  test.txt
src-tauri/src/: main.rs
src-tauri/src/commands/: delete_post.rs  login.rs  mod.rs  post_list.rs  save_post.rs
src/scripts/: edit.ts  login.ts  menu.ts  upload.ts
src/styles/: edit.css  login.css  menu.css  upload.css
